parser_M7/obj/parser.output
State 17 conflicts: 1 reduce/reduce
State 333 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 primary_expression: T_IDENTIFIER
    2                   | T_CONSTANT
    3                   | T_STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' T_IDENTIFIER
   10                   | postfix_expression T_PTR_OP T_IDENTIFIER
   11                   | postfix_expression T_INC_OP
   12                   | postfix_expression T_DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | T_INC_OP unary_expression
   17                 | T_DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | T_SIZEOF unary_expression
   20                 | T_SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | T_SUB
   24               | '~'
   25               | '!'

   26 cast_expression: unary_expression
   27                | '(' type_name ')' cast_expression

   28 multiplicative_expression: cast_expression
   29                          | multiplicative_expression '*' cast_expression
   30                          | multiplicative_expression '/' cast_expression
   31                          | multiplicative_expression '%' cast_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression T_ADD multiplicative_expression
   34                    | additive_expression T_SUB multiplicative_expression

   35 shift_expression: additive_expression
   36                 | shift_expression T_LEFT_OP additive_expression
   37                 | shift_expression T_RIGHT_OP additive_expression

   38 relational_expression: shift_expression
   39                      | relational_expression '<' shift_expression
   40                      | relational_expression '>' shift_expression
   41                      | relational_expression T_LE_OP shift_expression
   42                      | relational_expression T_GE_OP shift_expression

   43 equality_expression: relational_expression
   44                    | equality_expression T_EQ_OP relational_expression
   45                    | equality_expression T_NE_OP relational_expression

   46 and_expression: equality_expression
   47               | and_expression '&' equality_expression

   48 exclusive_or_expression: and_expression
   49                        | exclusive_or_expression '^' and_expression

   50 inclusive_or_expression: exclusive_or_expression
   51                        | inclusive_or_expression '|' exclusive_or_expression

   52 logical_and_expression: inclusive_or_expression
   53                       | logical_and_expression T_AND_OP inclusive_or_expression

   54 logical_or_expression: logical_and_expression
   55                      | logical_or_expression T_OR_OP logical_and_expression

   56 conditional_expression: logical_or_expression
   57                       | logical_or_expression '?' expression ':' conditional_expression

   58 assignment_expression: conditional_expression
   59                      | unary_expression assignment_operator assignment_expression

   60 assignment_operator: '='
   61                    | T_MUL_ASSIGN
   62                    | T_DIV_ASSIGN
   63                    | T_MOD_ASSIGN
   64                    | T_ADD_ASSIGN
   65                    | T_SUB_ASSIGN
   66                    | T_LEFT_ASSIGN
   67                    | T_RIGHT_ASSIGN
   68                    | T_AND_ASSIGN
   69                    | T_XOR_ASSIGN
   70                    | T_OR_ASSIGN

   71 expression: assignment_expression
   72           | expression ',' assignment_expression

   73 constant_expression: conditional_expression

   74 declaration: declaration_specifiers ';'
   75            | declaration_specifiers init_declarator_list ';'

   76 declaration_specifiers: storage_class_specifier
   77                       | storage_class_specifier declaration_specifiers
   78                       | type_specifier
   79                       | type_specifier declaration_specifiers
   80                       | type_qualifier
   81                       | type_qualifier declaration_specifiers

   82 init_declarator_list: init_declarator
   83                     | init_declarator_list ',' init_declarator

   84 init_declarator: declarator
   85                | declarator '=' initializer

   86 storage_class_specifier: T_TYPEDEF
   87                        | T_EXTERN
   88                        | T_STATIC
   89                        | T_AUTO
   90                        | T_REGISTER

   91 type_specifier: T_VOID
   92               | T_CHAR
   93               | T_SHORT
   94               | T_INT
   95               | T_LONG
   96               | T_FLOAT
   97               | T_DOUBLE
   98               | T_SIGNED
   99               | T_UNSIGNED
  100               | struct_or_union_specifier
  101               | enum_specifier
  102               | T_TYPE_NAME

  103 struct_or_union_specifier: struct_or_union T_IDENTIFIER '{' struct_declaration_list '}'
  104                          | struct_or_union '{' struct_declaration_list '}'
  105                          | struct_or_union T_IDENTIFIER

  106 struct_or_union: T_STRUCT
  107                | T_VOLATILE

  108 struct_declaration_list: struct_declaration
  109                        | struct_declaration_list struct_declaration

  110 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  111 specifier_qualifier_list: type_specifier specifier_qualifier_list
  112                         | type_specifier
  113                         | type_qualifier specifier_qualifier_list
  114                         | type_qualifier

  115 struct_declarator_list: struct_declarator
  116                       | struct_declarator_list ',' struct_declarator

  117 struct_declarator: declarator
  118                  | ':' constant_expression
  119                  | declarator ':' constant_expression

  120 enum_specifier: T_ENUM '{' enumerator_list '}'
  121               | T_ENUM T_IDENTIFIER '{' enumerator_list '}'
  122               | T_ENUM T_IDENTIFIER

  123 enumerator_list: enumerator
  124                | enumerator_list ',' enumerator

  125 enumerator: T_IDENTIFIER
  126           | T_IDENTIFIER '=' constant_expression

  127 type_qualifier: T_CONST
  128               | T_VOLATILE

  129 declarator: pointer direct_declarator
  130           | direct_declarator

  131 direct_declarator: T_IDENTIFIER
  132                  | '(' declarator ')'
  133                  | direct_declarator '[' constant_expression ']'
  134                  | direct_declarator '[' ']'
  135                  | direct_declarator '(' parameter_type_list ')'
  136                  | direct_declarator '(' identifier_list ')'
  137                  | direct_declarator '(' ')'

  138 pointer: '*'
  139        | '*' type_qualifier_list
  140        | '*' pointer
  141        | '*' type_qualifier_list pointer

  142 type_qualifier_list: type_qualifier
  143                    | type_qualifier_list type_qualifier

  144 parameter_type_list: parameter_list
  145                    | parameter_list ',' T_ELLIPSIS

  146 parameter_list: parameter_declaration
  147               | parameter_list ',' parameter_declaration

  148 parameter_declaration: declaration_specifiers declarator
  149                      | declaration_specifiers abstract_declarator
  150                      | declaration_specifiers

  151 identifier_list: T_IDENTIFIER
  152                | identifier_list ',' T_IDENTIFIER

  153 type_name: specifier_qualifier_list
  154          | specifier_qualifier_list abstract_declarator

  155 abstract_declarator: pointer
  156                    | direct_abstract_declarator
  157                    | pointer direct_abstract_declarator

  158 direct_abstract_declarator: '(' abstract_declarator ')'
  159                           | '[' ']'
  160                           | '[' constant_expression ']'
  161                           | direct_abstract_declarator '[' ']'
  162                           | direct_abstract_declarator '[' constant_expression ']'
  163                           | '(' ')'
  164                           | '(' parameter_type_list ')'
  165                           | direct_abstract_declarator '(' ')'
  166                           | direct_abstract_declarator '(' parameter_type_list ')'

  167 initializer: assignment_expression
  168            | '{' initializer_list '}'
  169            | '{' initializer_list ',' '}'

  170 initializer_list: initializer
  171                 | initializer_list ',' initializer

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: T_IDENTIFIER ':' statement
  179                  | T_CASE constant_expression ':' statement
  180                  | T_DEFAULT ':' statement

  181 compound_statement: '{' '}'
  182                   | '{' statement_list '}'
  183                   | '{' declaration_list '}'
  184                   | '{' declaration_list statement_list '}'

  185 declaration_list: declaration
  186                 | declaration_list declaration

  187 statement_list: statement
  188               | statement_list statement

  189 expression_statement: ';'
  190                     | expression ';'

  191 selection_statement: T_IF '(' expression ')' statement
  192                    | T_IF '(' expression ')' statement T_ELSE statement
  193                    | T_SWITCH '(' expression ')' statement

  194 iteration_statement: T_WHILE '(' expression ')' statement
  195                    | T_DO statement T_WHILE '(' expression ')' ';'
  196                    | T_FOR '(' expression_statement expression_statement ')' statement
  197                    | T_FOR '(' expression_statement expression_statement expression ')' statement

  198 jump_statement: T_GOTO T_IDENTIFIER ';'
  199               | T_CONTINUE ';'
  200               | T_BREAK ';'
  201               | T_RETURN ';'
  202               | T_RETURN expression ';'

  203 start: translation_unit

  204 translation_unit: external_declaration
  205                 | translation_unit external_declaration

  206 external_declaration: function_definition
  207                     | declaration

  208 function_definition: declaration_specifiers declarator declaration_list compound_statement
  209                    | declaration_specifiers declarator compound_statement
  210                    | declarator declaration_list compound_statement
  211                    | declarator compound_statement


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 25
    '%' (37) 31
    '&' (38) 21 47
    '(' (40) 4 7 8 20 27 132 135 136 137 158 163 164 165 166 191 192 193 194 195 196 197
    ')' (41) 4 7 8 20 27 132 135 136 137 158 163 164 165 166 191 192 193 194 195 196 197
    '*' (42) 22 29 138 139 140 141
    ',' (44) 14 72 83 116 124 145 147 152 169 171
    '.' (46) 9
    '/' (47) 30
    ':' (58) 57 118 119 178 179 180
    ';' (59) 74 75 110 189 190 195 198 199 200 201 202
    '<' (60) 39
    '=' (61) 60 85 126
    '>' (62) 40
    '?' (63) 57
    '[' (91) 6 133 134 159 160 161 162
    ']' (93) 6 133 134 159 160 161 162
    '^' (94) 49
    '{' (123) 103 104 120 121 168 169 181 182 183 184
    '|' (124) 51
    '}' (125) 103 104 120 121 168 169 181 182 183 184
    '~' (126) 24
    error (256)
    T_IDENTIFIER <string> (258) 1 9 10 103 105 121 122 125 126 131 151 152 178 198
    T_CONSTANT <string> (259) 2
    T_STRING_LITERAL <string> (260) 3
    T_PTR_OP (261) 10
    T_INC_OP (262) 11 16
    T_DEC_OP (263) 12 17
    T_LEFT_OP (264) 36
    T_RIGHT_OP (265) 37
    T_LE_OP (266) 41
    T_GE_OP (267) 42
    T_EQ_OP (268) 44
    T_NE_OP (269) 45
    T_SIZEOF (270) 19 20
    T_AND_OP (271) 53
    T_OR_OP (272) 55
    T_MUL_ASSIGN (273) 61
    T_DIV_ASSIGN (274) 62
    T_MOD_ASSIGN (275) 63
    T_ADD_ASSIGN (276) 64
    T_SUB_ASSIGN (277) 65
    T_LEFT_ASSIGN (278) 66
    T_RIGHT_ASSIGN (279) 67
    T_AND_ASSIGN (280) 68
    T_ADD (281) 33
    T_SUB (282) 23 34
    T_XOR_ASSIGN (283) 69
    T_OR_ASSIGN (284) 70
    T_TYPE_NAME (285) 102
    T_TYPEDEF (286) 86
    T_EXTERN (287) 87
    T_STATIC (288) 88
    T_AUTO (289) 89
    T_REGISTER (290) 90
    T_CHAR (291) 92
    T_SHORT (292) 93
    T_INT (293) 94
    T_LONG (294) 95
    T_SIGNED (295) 98
    T_UNSIGNED (296) 99
    T_FLOAT (297) 96
    T_DOUBLE (298) 97
    T_CONST (299) 127
    T_VOLATILE (300) 107 128
    T_VOID (301) 91
    T_STRUCT (302) 106
    T_ENUM (303) 120 121 122
    T_ELLIPSIS (304) 145
    T_CASE (305) 179
    T_DEFAULT (306) 180
    T_IF (307) 191 192
    T_ELSE (308) 192
    T_SWITCH (309) 193
    T_WHILE (310) 194 195
    T_DO (311) 195
    T_FOR (312) 196 197
    T_GOTO (313) 198
    T_CONTINUE (314) 199
    T_BREAK (315) 200
    T_RETURN (316) 201 202


Nonterminals, with rules where they appear

    $accept (84)
        on left: 0
    primary_expression <node> (85)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <node> (86)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 7 8 9 10 11 12 15
    argument_expression_list <node> (87)
        on left: 13 14
        on right: 8 14
    unary_expression <node> (88)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 26 59
    unary_operator <node> (89)
        on left: 21 22 23 24 25
        on right: 18
    cast_expression <node> (90)
        on left: 26 27
        on right: 18 27 28 29 30 31
    multiplicative_expression <node> (91)
        on left: 28 29 30 31
        on right: 29 30 31 32 33 34
    additive_expression <node> (92)
        on left: 32 33 34
        on right: 33 34 35 36 37
    shift_expression <node> (93)
        on left: 35 36 37
        on right: 36 37 38 39 40 41 42
    relational_expression <node> (94)
        on left: 38 39 40 41 42
        on right: 39 40 41 42 43 44 45
    equality_expression <node> (95)
        on left: 43 44 45
        on right: 44 45 46 47
    and_expression <node> (96)
        on left: 46 47
        on right: 47 48 49
    exclusive_or_expression <node> (97)
        on left: 48 49
        on right: 49 50 51
    inclusive_or_expression <node> (98)
        on left: 50 51
        on right: 51 52 53
    logical_and_expression <node> (99)
        on left: 52 53
        on right: 53 54 55
    logical_or_expression <node> (100)
        on left: 54 55
        on right: 55 56 57
    conditional_expression <node> (101)
        on left: 56 57
        on right: 57 58 73
    assignment_expression <node> (102)
        on left: 58 59
        on right: 13 14 59 71 72 167
    assignment_operator <node> (103)
        on left: 60 61 62 63 64 65 66 67 68 69 70
        on right: 59
    expression <node> (104)
        on left: 71 72
        on right: 4 6 57 72 190 191 192 193 194 195 197 202
    constant_expression <node> (105)
        on left: 73
        on right: 118 119 126 133 160 162 179
    declaration <node> (106)
        on left: 74 75
        on right: 185 186 207
    declaration_specifiers <node> (107)
        on left: 76 77 78 79 80 81
        on right: 74 75 77 79 81 148 149 150 208 209
    init_declarator_list <node> (108)
        on left: 82 83
        on right: 75 83
    init_declarator <node> (109)
        on left: 84 85
        on right: 82 83
    storage_class_specifier <node> (110)
        on left: 86 87 88 89 90
        on right: 76 77
    type_specifier <node> (111)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102
        on right: 78 79 111 112
    struct_or_union_specifier <node> (112)
        on left: 103 104 105
        on right: 100
    struct_or_union <node> (113)
        on left: 106 107
        on right: 103 104 105
    struct_declaration_list <node> (114)
        on left: 108 109
        on right: 103 104 109
    struct_declaration <node> (115)
        on left: 110
        on right: 108 109
    specifier_qualifier_list <node> (116)
        on left: 111 112 113 114
        on right: 110 111 113 153 154
    struct_declarator_list <node> (117)
        on left: 115 116
        on right: 110 116
    struct_declarator <node> (118)
        on left: 117 118 119
        on right: 115 116
    enum_specifier <node> (119)
        on left: 120 121 122
        on right: 101
    enumerator_list <node> (120)
        on left: 123 124
        on right: 120 121 124
    enumerator <node> (121)
        on left: 125 126
        on right: 123 124
    type_qualifier <node> (122)
        on left: 127 128
        on right: 80 81 113 114 142 143
    declarator <node> (123)
        on left: 129 130
        on right: 84 85 117 119 132 148 208 209 210 211
    direct_declarator <node> (124)
        on left: 131 132 133 134 135 136 137
        on right: 129 130 133 134 135 136 137
    pointer <node> (125)
        on left: 138 139 140 141
        on right: 129 140 141 155 157
    type_qualifier_list <node> (126)
        on left: 142 143
        on right: 139 141 143
    parameter_type_list <node> (127)
        on left: 144 145
        on right: 135 164 166
    parameter_list <node> (128)
        on left: 146 147
        on right: 144 145 147
    parameter_declaration <node> (129)
        on left: 148 149 150
        on right: 146 147
    identifier_list <node> (130)
        on left: 151 152
        on right: 136 152
    type_name <node> (131)
        on left: 153 154
        on right: 20 27
    abstract_declarator <node> (132)
        on left: 155 156 157
        on right: 149 154 158
    direct_abstract_declarator <node> (133)
        on left: 158 159 160 161 162 163 164 165 166
        on right: 156 157 161 162 165 166
    initializer <node> (134)
        on left: 167 168 169
        on right: 85 170 171
    initializer_list <node> (135)
        on left: 170 171
        on right: 168 169 171
    statement <node> (136)
        on left: 172 173 174 175 176 177
        on right: 178 179 180 187 188 191 192 193 194 195 196 197
    labeled_statement <node> (137)
        on left: 178 179 180
        on right: 172
    compound_statement <node> (138)
        on left: 181 182 183 184
        on right: 173 208 209 210 211
    declaration_list <node> (139)
        on left: 185 186
        on right: 183 184 186 208 210
    statement_list <node> (140)
        on left: 187 188
        on right: 182 184 188
    expression_statement <node> (141)
        on left: 189 190
        on right: 174 196 197
    selection_statement <node> (142)
        on left: 191 192 193
        on right: 175
    iteration_statement <node> (143)
        on left: 194 195 196 197
        on right: 176
    jump_statement <node> (144)
        on left: 198 199 200 201 202
        on right: 177
    start <node> (145)
        on left: 203
        on right: 0
    translation_unit <node> (146)
        on left: 204 205
        on right: 203 205
    external_declaration <node> (147)
        on left: 206 207
        on right: 204 205
    function_definition <node> (148)
        on left: 208 209 210 211
        on right: 206


State 0

    0 $accept: . start $end

    T_IDENTIFIER  shift, and go to state 1
    T_TYPE_NAME   shift, and go to state 2
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_CONST       shift, and go to state 16
    T_VOLATILE    shift, and go to state 17
    T_VOID        shift, and go to state 18
    T_STRUCT      shift, and go to state 19
    T_ENUM        shift, and go to state 20
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    start                      go to state 34
    translation_unit           go to state 35
    external_declaration       go to state 36
    function_definition        go to state 37


State 1

  131 direct_declarator: T_IDENTIFIER .

    $default  reduce using rule 131 (direct_declarator)


State 2

  102 type_specifier: T_TYPE_NAME .

    $default  reduce using rule 102 (type_specifier)


State 3

   86 storage_class_specifier: T_TYPEDEF .

    $default  reduce using rule 86 (storage_class_specifier)


State 4

   87 storage_class_specifier: T_EXTERN .

    $default  reduce using rule 87 (storage_class_specifier)


State 5

   88 storage_class_specifier: T_STATIC .

    $default  reduce using rule 88 (storage_class_specifier)


State 6

   89 storage_class_specifier: T_AUTO .

    $default  reduce using rule 89 (storage_class_specifier)


State 7

   90 storage_class_specifier: T_REGISTER .

    $default  reduce using rule 90 (storage_class_specifier)


State 8

   92 type_specifier: T_CHAR .

    $default  reduce using rule 92 (type_specifier)


State 9

   93 type_specifier: T_SHORT .

    $default  reduce using rule 93 (type_specifier)


State 10

   94 type_specifier: T_INT .

    $default  reduce using rule 94 (type_specifier)


State 11

   95 type_specifier: T_LONG .

    $default  reduce using rule 95 (type_specifier)


State 12

   98 type_specifier: T_SIGNED .

    $default  reduce using rule 98 (type_specifier)


State 13

   99 type_specifier: T_UNSIGNED .

    $default  reduce using rule 99 (type_specifier)


State 14

   96 type_specifier: T_FLOAT .

    $default  reduce using rule 96 (type_specifier)


State 15

   97 type_specifier: T_DOUBLE .

    $default  reduce using rule 97 (type_specifier)


State 16

  127 type_qualifier: T_CONST .

    $default  reduce using rule 127 (type_qualifier)


State 17

  107 struct_or_union: T_VOLATILE .
  128 type_qualifier: T_VOLATILE .

    T_IDENTIFIER  reduce using rule 107 (struct_or_union)
    T_IDENTIFIER  [reduce using rule 128 (type_qualifier)]
    '{'           reduce using rule 107 (struct_or_union)
    $default      reduce using rule 128 (type_qualifier)


State 18

   91 type_specifier: T_VOID .

    $default  reduce using rule 91 (type_specifier)


State 19

  106 struct_or_union: T_STRUCT .

    $default  reduce using rule 106 (struct_or_union)


State 20

  120 enum_specifier: T_ENUM . '{' enumerator_list '}'
  121               | T_ENUM . T_IDENTIFIER '{' enumerator_list '}'
  122               | T_ENUM . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 38
    '{'           shift, and go to state 39


State 21

  132 direct_declarator: '(' . declarator ')'

    T_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    declarator         go to state 40
    direct_declarator  go to state 32
    pointer            go to state 33


State 22

  138 pointer: '*' .
  139        | '*' . type_qualifier_list
  140        | '*' . pointer
  141        | '*' . type_qualifier_list pointer

    T_CONST     shift, and go to state 16
    T_VOLATILE  shift, and go to state 41
    '*'         shift, and go to state 22

    $default  reduce using rule 138 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


State 23

  207 external_declaration: declaration .

    $default  reduce using rule 207 (external_declaration)


State 24

   74 declaration: declaration_specifiers . ';'
   75            | declaration_specifiers . init_declarator_list ';'
  208 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  209                    | declaration_specifiers . declarator compound_statement

    T_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21
    '*'           shift, and go to state 22
    ';'           shift, and go to state 45

    init_declarator_list  go to state 46
    init_declarator       go to state 47
    declarator            go to state 48
    direct_declarator     go to state 32
    pointer               go to state 33


State 25

   76 declaration_specifiers: storage_class_specifier .
   77                       | storage_class_specifier . declaration_specifiers

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20

    $default  reduce using rule 76 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 26

   78 declaration_specifiers: type_specifier .
   79                       | type_specifier . declaration_specifiers

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20

    $default  reduce using rule 78 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 27

  100 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 100 (type_specifier)


State 28

  103 struct_or_union_specifier: struct_or_union . T_IDENTIFIER '{' struct_declaration_list '}'
  104                          | struct_or_union . '{' struct_declaration_list '}'
  105                          | struct_or_union . T_IDENTIFIER

    T_IDENTIFIER  shift, and go to state 51
    '{'           shift, and go to state 52


State 29

  101 type_specifier: enum_specifier .

    $default  reduce using rule 101 (type_specifier)


State 30

   80 declaration_specifiers: type_qualifier .
   81                       | type_qualifier . declaration_specifiers

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20

    $default  reduce using rule 80 (declaration_specifiers)

    declaration_specifiers     go to state 53
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30


State 31

  210 function_definition: declarator . declaration_list compound_statement
  211                    | declarator . compound_statement

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20
    '{'          shift, and go to state 54

    declaration                go to state 55
    declaration_specifiers     go to state 56
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    compound_statement         go to state 57
    declaration_list           go to state 58


State 32

  130 declarator: direct_declarator .
  133 direct_declarator: direct_declarator . '[' constant_expression ']'
  134                  | direct_declarator . '[' ']'
  135                  | direct_declarator . '(' parameter_type_list ')'
  136                  | direct_declarator . '(' identifier_list ')'
  137                  | direct_declarator . '(' ')'

    '('  shift, and go to state 59
    '['  shift, and go to state 60

    $default  reduce using rule 130 (declarator)


State 33

  129 declarator: pointer . direct_declarator

    T_IDENTIFIER  shift, and go to state 1
    '('           shift, and go to state 21

    direct_declarator  go to state 61


State 34

    0 $accept: start . $end

    $end  shift, and go to state 62


State 35

  203 start: translation_unit .
  205 translation_unit: translation_unit . external_declaration

    T_IDENTIFIER  shift, and go to state 1
    T_TYPE_NAME   shift, and go to state 2
    T_TYPEDEF     shift, and go to state 3
    T_EXTERN      shift, and go to state 4
    T_STATIC      shift, and go to state 5
    T_AUTO        shift, and go to state 6
    T_REGISTER    shift, and go to state 7
    T_CHAR        shift, and go to state 8
    T_SHORT       shift, and go to state 9
    T_INT         shift, and go to state 10
    T_LONG        shift, and go to state 11
    T_SIGNED      shift, and go to state 12
    T_UNSIGNED    shift, and go to state 13
    T_FLOAT       shift, and go to state 14
    T_DOUBLE      shift, and go to state 15
    T_CONST       shift, and go to state 16
    T_VOLATILE    shift, and go to state 17
    T_VOID        shift, and go to state 18
    T_STRUCT      shift, and go to state 19
    T_ENUM        shift, and go to state 20
    '('           shift, and go to state 21
    '*'           shift, and go to state 22

    $default  reduce using rule 203 (start)

    declaration                go to state 23
    declaration_specifiers     go to state 24
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    declarator                 go to state 31
    direct_declarator          go to state 32
    pointer                    go to state 33
    external_declaration       go to state 63
    function_definition        go to state 37


State 36

  204 translation_unit: external_declaration .

    $default  reduce using rule 204 (translation_unit)


State 37

  206 external_declaration: function_definition .

    $default  reduce using rule 206 (external_declaration)


State 38

  121 enum_specifier: T_ENUM T_IDENTIFIER . '{' enumerator_list '}'
  122               | T_ENUM T_IDENTIFIER .

    '{'  shift, and go to state 64

    $default  reduce using rule 122 (enum_specifier)


State 39

  120 enum_specifier: T_ENUM '{' . enumerator_list '}'

    T_IDENTIFIER  shift, and go to state 65

    enumerator_list  go to state 66
    enumerator       go to state 67


State 40

  132 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 68


State 41

  128 type_qualifier: T_VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 42

  142 type_qualifier_list: type_qualifier .

    $default  reduce using rule 142 (type_qualifier_list)


State 43

  140 pointer: '*' pointer .

    $default  reduce using rule 140 (pointer)


State 44

  139 pointer: '*' type_qualifier_list .
  141        | '*' type_qualifier_list . pointer
  143 type_qualifier_list: type_qualifier_list . type_qualifier

    T_CONST     shift, and go to state 16
    T_VOLATILE  shift, and go to state 41
    '*'         shift, and go to state 22

    $default  reduce using rule 139 (pointer)

    type_qualifier  go to state 69
    pointer         go to state 70


State 45

   74 declaration: declaration_specifiers ';' .

    $default  reduce using rule 74 (declaration)


State 46

   75 declaration: declaration_specifiers init_declarator_list . ';'
   83 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 71
    ';'  shift, and go to state 72


State 47

   82 init_declarator_list: init_declarator .

    $default  reduce using rule 82 (init_declarator_list)


State 48

   84 init_declarator: declarator .
   85                | declarator . '=' initializer
  208 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  209                    | declaration_specifiers declarator . compound_statement

    T_TYPE_NAME  shift, and go to state 2
    T_TYPEDEF    shift, and go to state 3
    T_EXTERN     shift, and go to state 4
    T_STATIC     shift, and go to state 5
    T_AUTO       shift, and go to state 6
    T_REGISTER   shift, and go to state 7
    T_CHAR       shift, and go to state 8
    T_SHORT      shift, and go to state 9
    T_INT        shift, and go to state 10
    T_LONG       shift, and go to state 11
    T_SIGNED     shift, and go to state 12
    T_UNSIGNED   shift, and go to state 13
    T_FLOAT      shift, and go to state 14
    T_DOUBLE     shift, and go to state 15
    T_CONST      shift, and go to state 16
    T_VOLATILE   shift, and go to state 17
    T_VOID       shift, and go to state 18
    T_STRUCT     shift, and go to state 19
    T_ENUM       shift, and go to state 20
    '='          shift, and go to state 73
    '{'          shift, and go to state 54

    $default  reduce using rule 84 (init_declarator)

    declaration                go to state 55
    declaration_specifiers     go to state 56
    storage_class_specifier    go to state 25
    type_specifier             go to state 26
    struct_or_union_specifier  go to state 27
    struct_or_union            go to state 28
    enum_specifier             go to state 29
    type_qualifier             go to state 30
    compound_statement         go to state 74
    declaration_list           go to state 75


State 49

   77 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 77 (declaration_specifiers)


State 50

   79 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 79 (declaration_specifiers)


State 51
